app/assets/stylesheets/home.scss
@import 'http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css';
@import 'http://fonts.googleapis.com/css?family=Roboto:700,400';



body{
  background-image: url(background/564960.jpg);
  background-size: cover;





}

main {
  @include span-columns(7);






  h1 {
    text-align: center;
    color: white;
    margin-left: 600px;
  }

  h2 {
    text-align: center;
  }

  h3 {
    color: white;
    margin-top: 25px;
    text-align: center;
    margin-left: 400px;
  }

  ul.band-list {
    @include outer-container;
    margin-left: 400px;




    h1 {
      color: white;
      margin-bottom: 25px;
    }

    li {
      @include span-columns(3 of 12);
      @include omega(4n);
      text-align: center;
      -webkit-box-shadow:
        0 2px 8px rgba(0,0,0,0.5),
        inset 0 1px rgba(255,255,255,0.3),
        inset 0 10px 20px rgba(255,255,255,0.25),
        inset 0 -15px 30px rgba(0,0,0,0.3);





      a {
        display: block;
        color: white;
      }
    }
  }

  ul.musicians-list {
    @include outer-container;
    margin-left: 300px;
    li {
      @include span-columns(4 of 12);
      @include omega(3n);
      text-align: center;
      margin-bottom: 20px;
      -webkit-box-shadow:
        0 2px 8px rgba(0,0,0,0.5),
        inset 0 1px rgba(255,255,255,0.3),
        inset 0 10px 20px rgba(255,255,255,0.25),
        inset 0 -15px 30px rgba(0,0,0,0.3);
      border: blurred;


      .social_icons {
        display: inline-block;
        width: 48px;
        height: 48px;
        line-height: 48px;
        text-align: center;
        border-radius: 50%;
        outline: 0;

        box-shadow:
        0 2px 4px rgba(0,0,0, 0.12),
        0 2px 4px rgba(0,0,0, 0.24);



        }

        h3.position_text
        { margin-top: 50px;


        }
        .card_article{
          width: 100%;
        }

        a.musician_aboutme {


        }

      p {
        font-size: 0.77em;

      }

      a {
      display: block;
      color: white;

      }
    }
  }
}



p.filter_genre {
  text-align: left;

}


  div.genres-scroll {
    @include span-columns(5);
    height: 500px;
    overflow: auto;
    text-align: right;
    color: white;
    margin-left: 200px;
  }

  a {
    color: white;
  }


.hero {
  background-image: url("home/index/Band_Aide_Logo");
  background-size: cover;
  margin-bottom: 30px;
  height: 700px;
  position: relative;
  bottom: 210px;

}

